fix: spacer for item before filter icon to avoid overlapping

--- a/packages/style/scss/ec-list/_ec-list-column-filter.scss
+++ b/packages/style/scss/ec-list/_ec-list-column-filter.scss
@@ -31,3 +31,8 @@
     }
   }
 }
+
+// spacer for item before filter icon to avoid overlapping
+.is-last-column {
+  padding-right: rem(32);
+}
